@dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/atlc.c)
AM_INIT_AUTOMAKE(atlc, 2.4)

dnl Checks for programs.
AC_PROG_CC
AC_ISC_POSIX

AC_OUTPUT_COMMANDS([exit])
dnl Checks for libraries.
AC_CHECK_LIB(m,log)
		
dnl Checks for header files.
AC_STDC_HEADERS
AC_HAVE_HEADERS(stdio.h math.h errno.h stdlib.h string.h thread.h pthread.h pthreads.h)
AC_HAVE_HEADERS("intelligent life")

dnl check to see if the machine is big endian
AC_C_BIGENDIAN

dnl Checks for library functions.
						   
dnl Check for st_blksize in struct stat
AC_ST_BLKSIZE

dnl Multi-Processor Support
AC_ARG_WITH(mp, [  --with-mp=[no]           support multiple processors (needs pthreads installed) ])
if test "x$with_mp" = "xyes"; then
AC_DEFINE(ENABLE_MP)
AC_DEFINE(_REENTRANT)
AC_DEFINE(_THREAD_SAFE)
AC_CHECK_LIB(thread,  pthread_create)
AC_CHECK_LIB(pthread,  pthread_create)
AC_CHECK_LIB(thread, thr_setconcurrency, [AC_DEFINE(HAVE_THR_SETCONCURRENCY)])
fi
AC_OUTPUT([Makefile src/Makefile  man/Makefile html-docs/Makefile])
