# This is Makefile.am, which is proceed by automake

SUBDIRS = jpgs

htmldir = $(datadir)/atlc/docs/html-docs

html_DATA = IMPORTANT.html \
FAQ.html \
accuracy.html \
an_example_of_using_design_coupler.html \
atlc.1.html \
banner.html \
bmp.html \
building.html \
calculate_zodd_and_zeven.html \
colours.html \
couplers.html \
create_bmp_for_circ_in_circ.1.html \
create_bmp_for_circ_in_rect.1.html \
create_bmp_for_rect_cen_in_rect.1.html \
create_bmp_for_rect_in_circ.1.html \
create_bmp_for_rect_in_rect.1.html \
create_bmp_for_stripline_coupler.1.html \
create_bmp_for_symmetrical_stripline.1.html \
determine_dimensions_of_couplers.html \
errors.html \
examples.html \
fileformat.html \
generate_for_coupler.html \
generators.html \
index.html \
index2.html \
man-pages.html \
options.html \
readbin.1.html \
rect_in_rect.html \
theory.html \
todo.html \
tutorial.html \
usage_design_coupler.html 

EXTRA_DIST = BUGS.html \
FAQ.html \
IMPORTANT.html \
accuracy.html \
an_example_of_using_design_coupler.html \
atlc.1.html \
banner.html \
bmp.html \
building.html \
calculate_zodd_and_zeven.html \
colours.html \
couplers.html \
create_bmp_for_circ_in_circ.1.html \
create_bmp_for_circ_in_rect.1.html \
create_bmp_for_rect_cen_in_rect.1.html \
create_bmp_for_rect_in_circ.1.html \
create_bmp_for_rect_in_rect.1.html \
create_bmp_for_stripline_coupler.1.html \
create_bmp_for_symmetrical_stripline.1.html \
determine_dimensions_of_couplers.html \
errors.html \
examples.html \
fileformat.html \
generate_for_coupler.html \
generators.html \
index.html \
index2.html \
man-pages.html \
options.html \
readbin.1.html \
rect_in_rect.html \
theory.html \
todo.html \
tutorial.html \
usage_design_coupler.html 

CLEANFILES =

DISTCLEANFILES =
