bin_PROGRAMS = atlc_old rect_in_rect circ_in_circ rect_cen_in_rect \
circ_in_rect rect_in_circ readbin sym_strip make_coupler \
design_coupler

atlc_old_SOURCES = nrutil.c atlc_old.c read_bitmap_file_headers.c \
byteswap.c string.c setup_arrays.c finite_difference_single_threaded.c \
finite_difference_multi_threaded.c usage_atlc.c write_fields.c\
check_for_shorts.c print_data.c bmp.h definitions.h Erdata.h \
check_for_boundaries.c find_energy_per_metre.c \
update_voltage_array.c get_file_pointer_with_right_filename.c\
find_maximum_values.c calculate_colour_data.c find_electric_fields.c\
get_options.c error_and_exit.c do_fd_calculation.c \
swap_conductor_voltages.c print_copyright.c print_data2.c

rect_in_rect_SOURCES = rect_in_rect.c usage_rect_in_rect.c write_bitmap.c \
get_Er1_and_Er2_colours.c convert_rect_in_rect_dimensions_to_integers.c \
string.c nrutil.c write_bitmap_out.c byteswap.c \
align_bitmap_image.c fill_rect_in_rect.c check_rect_in_rect.c \
check_error.c get_options.c definitions.h  error_and_exit.c print_copyright.c

rect_cen_in_rect_SOURCES = rect_cen_in_rect.c usage_rect_cen_in_rect.c \
write_bitmap.c \
get_Er1_and_Er2_colours.c convert_rect_in_rect_dimensions_to_integers.c \
string.c nrutil.c write_bitmap_out.c byteswap.c \
align_bitmap_image.c fill_rect_in_rect.c check_rect_in_rect.c \
check_error.c get_options.c definitions.h error_and_exit.c \
print_copyright.c

circ_in_circ_SOURCES = circ_in_circ.c usage_circ_in_circ.c write_bitmap.c \
get_Er1_and_Er2_colours.c convert_circ_in_circ_dimensions_to_integers.c \
string.c nrutil.c write_bitmap_out.c byteswap.c \
align_bitmap_image.c fill_circ_in_circ.c check_circ_in_circ.c \
check_error.c get_options.c definitions.h error_and_exit.c \
print_copyright.c

circ_in_rect_SOURCES = circ_in_rect.c usage_circ_in_rect.c write_bitmap.c \
get_Er1_and_Er2_colours.c convert_circ_in_rect_dimensions_to_integers.c \
string.c nrutil.c write_bitmap_out.c byteswap.c \
align_bitmap_image.c fill_circ_in_rect.c check_circ_in_rect.c \
check_error.c get_options.c definitions.h error_and_exit.c \
print_copyright.c

rect_in_circ_SOURCES = rect_in_circ.c usage_rect_in_circ.c write_bitmap.c \
get_Er1_and_Er2_colours.c convert_rect_in_circ_dimensions_to_integers.c \
string.c nrutil.c write_bitmap_out.c byteswap.c \
align_bitmap_image.c fill_rect_in_circ.c check_rect_in_circ.c \
check_error.c get_options.c definitions.h error_and_exit.c \
print_copyright.c

readbin_SOURCES = readbin.c definitions.h byteswap.c usage_readbin.c \
get_options.c error_and_exit.c print_copyright.c

sym_strip_SOURCES = sym_strip.c fill_image_vector_for_sym_strip.c \
usage_sym_strip.c string.c nrutil.c write_bitmap_out.c\
align_bitmap_image.c byteswap.c calculate_sym_strip_impedance.c\
elliptic_integral.c get_options.c definitions.h error_and_exit.c \
print_copyright.c

make_coupler_SOURCES = make_coupler.c usage_make_coupler.c \
calculate_Zodd_and_Zeven.c get_options.c definitions.h \
calculate_integer_values.c write_bitmap.c \
string.c nrutil.c write_bitmap_out.c byteswap.c \
align_bitmap_image.c fill_make_coupler.c \
check_error.c  definitions.h  error_and_exit.c \
get_Er1_and_Er2_colours.c print_copyright.c

design_coupler_SOURCES = design_coupler.c usage_design_coupler.c \
get_options.c print_copyright.c

EXTRA_DIST = create tests DO_NOT_EDIT_THIS_FILE
